--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -34,7 +34,7 @@ body {
     margin: 0;
     padding: 0;
 
-    height: 100vh;
+    height: 100%;
     width: 100%;
 
     display: flex;
@@ -50,9 +50,13 @@ a:hover {
     color: var(--color-header-logo-text-hover);
 }
 
+img {
+    border-radius: 1rem;
+}
+
 #content {
-    height: 100%;
-    width: min(100vw, 1000px);
+    min-height: 100vh;
+    width: min(100vw, 1080px);
 
     padding: 0 1rem;
 
@@ -92,19 +96,20 @@ header .menu {
 
 #main {
     margin: 1rem 0;
+}
 
-    /* TO REVIEW */
+#main.main-display, 
+#main.contact-display,
+#main.attribution-display {
+
     display: flex;
     flex-direction: column;
     align-items: center;
-
     gap: 1rem;
-
 }
 
 #main .main-img {
-    border-radius: 1rem;
-    width: 100%;
+    max-width: 100%;
 }
 
 #main .alt-font {
@@ -112,13 +117,47 @@ header .menu {
     font-size: 1.5rem;
 }
 
-#main .main-attribution-img {
-    border-radius: 1rem;
-    width: 70%;
+#main.menu-display {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: stretch;
+    gap: 1rem;
 }
 
-#main .attribution {
-    font-size: 2rem;
+#main .menu-item {
+    padding: 1rem;
+
+    border-color: var(--color-header-logo-text);
+    border-radius: 1rem;
+    border-style: solid;
+    border-width: 0.5rem;
+
+    max-width: calc((1080px - 7rem) / 2) ;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    gap: 1rem;
+}
+
+#main .menu-item .alt-font {
+    font-size: 1.25rem;
+
+    width: 100%;
+}
+
+#main .menu-item img {
+    max-width: 100%;
+}
+
+#main .main-attribution-img {
+    max-width: 450px;
+}
+
+#main .attribution a {
+    font-size: 1.75rem;
 }
 
 footer {
